# ChangeLog for sys-apps/hal
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.152 2007/04/09 21:32:22 cardoe Exp $

  09 Apr 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.9.ebuild:
  INOTIFY -> INOTIFY_USER

  09 Apr 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.9.ebuild:
  add Inotify support warning

  07 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  +files/0.5.9/95_gentoo_man_page.patch,
  +files/0.5.9/96_plugdev_allow_send.patch, files/0.5.9/series,
  hal-0.5.9.ebuild:
  man page changes for Gentoo. migrate plugdev policy patch to new patchset.

  06 Apr 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.9.ebuild:
  Fix up SELinux support

  06 Apr 2007; Doug Goldstein <cardoe@gentoo.org> files/0.5.9-hald.rc,
  hal-0.5.9.ebuild:
  util-linux is only for Linux. init script depends on acpid now if the person
  uses acpid. So we don't grab the /proc/acpi/event before acpid.

  06 Apr 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.9.ebuild:
  Adding kernel_linux and kernel_FreeBSD to IUSE

  05 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  +files/0.5.9/02_acpi_repeated_property_change.patch,
  +files/0.5.9/03_crasher_fix_fail_to_return_value.patch,
  files/0.5.9/series, hal-0.5.9.ebuild:
  Re-work acpi USE flag usage. Add pam USE flag for sys-auth/consolekit.
  Remove mactel USE flag since it will auto build and that's how it should.
  Added linux-sources depend on having a Linux kernel. Check for Linux or
  FreeBSD kernel to support both Gentoo/Linux and Gentoo/FreeBSD. Add building
  of dell utilies based on dell USE flag so we don't have an automagical
  depend. 2 upstream fixes. One for duplicate acpi messages. One for a
  possible crasher.

  05 Apr 2007; Doug Goldstein <cardoe@gentoo.org> +files/0.5.9-hald.rc,
  +files/0.5.9/series, -files/hald, hal-0.5.9.ebuild:
  Adding 0.5.9 init script which uses consolekit. Removing 0.4.x series init