@@ -147,14 +147,14 @@ EBUILD hal-0.5.7.1-r5.ebuild 6426 RMD160 ba28bce7126639c77de28ac2fc8d233475bb498
 MD5 709ca20b11819f2e13e381be47e19535 hal-0.5.7.1-r5.ebuild 6426
 RMD160 ba28bce7126639c77de28ac2fc8d233475bb498e hal-0.5.7.1-r5.ebuild 6426
 SHA256 6e020d3a29d82b993984f58ab8ef3659d837c11bce25f3ad25df6f4748e11207 hal-0.5.7.1-r5.ebuild 6426
-EBUILD hal-0.5.9.ebuild 6003 RMD160 ec8e12395260eec4be9e94b1fced53b430fc5a36 SHA1 1619e26397aea76af79ba4ecedce69cb763fec52 SHA256 8bfed3e9620ad02b3bcf4962660611663cafeb799272a314d3c0b34b5c8278c7
-MD5 79422c50d92ed6bb9f6ffa5b5a462010 hal-0.5.9.ebuild 6003
-RMD160 ec8e12395260eec4be9e94b1fced53b430fc5a36 hal-0.5.9.ebuild 6003
-SHA256 8bfed3e9620ad02b3bcf4962660611663cafeb799272a314d3c0b34b5c8278c7 hal-0.5.9.ebuild 6003
-MISC ChangeLog 24268 RMD160 6f8dd54de200e7d608057e443644f33feb2a93ce SHA1 4434027b5e6ba795ed647abf61eb4f779fcdb274 SHA256 0c0a1849501041ee492afe688acd5d56aee078aeebee5107087e576abf98d61f
-MD5 9f43e8c0dde3626d18290609b1f0b30b ChangeLog 24268
-RMD160 6f8dd54de200e7d608057e443644f33feb2a93ce ChangeLog 24268
-SHA256 0c0a1849501041ee492afe688acd5d56aee078aeebee5107087e576abf98d61f ChangeLog 24268
+EBUILD hal-0.5.9.ebuild 6065 RMD160 d6370e8a09e33bfbe77f8912185e79ef84c281a4 SHA1 f5330383b89efb8aafe86c7b9b464d51c569fa8c SHA256 131f9a3bc8a9d03726a496283fa386b78bd31051b4ad447d554774e1d27a128e
+MD5 4c5c6993a56e1616c1bb172e7029b201 hal-0.5.9.ebuild 6065
+RMD160 d6370e8a09e33bfbe77f8912185e79ef84c281a4 hal-0.5.9.ebuild 6065
+SHA256 131f9a3bc8a9d03726a496283fa386b78bd31051b4ad447d554774e1d27a128e hal-0.5.9.ebuild 6065
+MISC ChangeLog 24402 RMD160 2ed788dbccba2265efbb94b2c9f245c72d57ec24 SHA1 aba2928bff497596039f7c26a35543da48f1a785 SHA256 dab5fe8c4ec746350f1e4b49716ec91ae2704c6eef5a79e60ddd55afe7ae0b85
+MD5 51afc512100321ffd2046539a552bb3e ChangeLog 24402
+RMD160 2ed788dbccba2265efbb94b2c9f245c72d57ec24 ChangeLog 24402
+SHA256 dab5fe8c4ec746350f1e4b49716ec91ae2704c6eef5a79e60ddd55afe7ae0b85 ChangeLog 24402
 MISC metadata.xml 345 RMD160 aa6e810e9546542453ebe5d6ca46804e99f447f2 SHA1 fef829210e8555807f9b69ba5afedffb8af8d02c SHA256 0c9aeabf473a6836c25a5db2ca86b880dec1efa9e52310725e08d1e0df93447d
 MD5 3317c4000387b670183d305ef9937b75 metadata.xml 345
 RMD160 aa6e810e9546542453ebe5d6ca46804e99f447f2 metadata.xml 345
@@ -171,7 +171,7 @@ SHA256 d862b002c9a5547954874b2a0cbadd614381d085e850539e6aef2dd9e9d52dfe files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.3 (GNU/Linux)
 
-iD8DBQFGGrEhoeSe8B0zEfwRAk7AAJ9IqX00tUc+72YiT58gdOE8SzczngCbBnAZ
-aK7j4L9jfHjwYLNhDlXo7hw=
-=mvyR
+iD8DBQFGGrM9oeSe8B0zEfwRAsTZAJ4iShkmqipnsCv4UOqbKOYbQIn4jgCeJTgr
+OImypSZRIOwle0cDQ4rMSuk=
+=T5kN
 -----END PGP SIGNATURE-----
