@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/hal-0.5.9.ebuild,v 1.11 2007/04/09 21:32:22 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/hal-0.5.9.ebuild,v 1.12 2007/04/09 21:42:25 cardoe Exp $
 
 inherit eutils linux-info autotools flag-o-matic
 
@@ -17,9 +17,10 @@ IUSE="acpi crypt debug dell disk-partition doc pam pcmcia selinux ${KERNEL_IUSE}
 
 RDEPEND=">=dev-libs/glib-2.6
 		>=dev-libs/dbus-glib-0.61
-		>=sys-fs/udev-104
+		kernel_linux? ( >=sys-fs/udev-104 )
 		kernel_linux? ( >=sys-apps/util-linux-2.12r-r1 )
 		kernel_linux? ( >=sys-kernel/linux-headers-2.6.17 )
+		kernel_FreeBSD? ( dev-libs/libvolume_id )
 		>=dev-libs/expat-1.95.8
 		>=sys-apps/pciutils-2.2.3
 		>=dev-libs/libusb-0.1.10a
