@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.152 2007/04/09 21:32:22 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.153 2007/04/09 21:42:25 cardoe Exp $
+
+  09 Apr 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.9.ebuild:
+  Gentoo/FreeBSD dep on libvolume_id. udev is only Linux as well
 
   09 Apr 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.9.ebuild:
   INOTIFY -> INOTIFY_USER
